kubernetes/api-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app: api
spec:
  type: NodePort
  ports:
    - name: api
      port: 4000
      targetPort: 4000
  selector:
    app: api
