kubernetes/mongo-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: nova-commerce
  labels:
    app: mongo
spec:
  type: ClusterIP
  ports:
    - name: mongo
      port: 27017
      targetPort: 27017
  selector:
    app: mongo
