kubernetes/redis-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: redis
spec:
  type: ClusterIP
  ports:
   - name: 'redis'
     port: 6379
     targetPort: 6379
  selector:
    app: redis
