kubernetes/services.yaml
apiVersion: apps/v1
kind: Service
metadata:
  name: app
  labels:
   app: backend
spec:
