kubernetes/web-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    app: web
spec:
  type: NodePort
  ports:
    - name: web
      port: 8081
      targetPort: 80
      nodePort: 31000
  selector:
    app: web
