kubernetes/nova-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: nova-commerce-ingress
  namespace: nova-commerce
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

spec:
  ingressClassName: alb

  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80
